--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,4 +1,4 @@
-<h1>The Best Movies According to Nagendra</h1>
+<div class="movies"><h1>The Best Movies According to Nagendra</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
 <h3>Spirited Away</h3>
@@ -6,4 +6,7 @@
 <h3>Ex Machina</h3>
 <p>Really cool sci-fi movie.</p>
 <h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<p>Super beautiful film. Really artistic.m</p>
+</div>
+<!-- $ git config --global user.name "Nagendra-Chowdary"
+$ git config --global user.email chowdarynagendra006@gmail.com -->
